add getShopByUserId
