# docs/swagger.json
@@ -70,6 +70,39 @@
                 }
             }
         },
+        "/v1/shops/{user_id}": {
+            "get": {
+                "tags": [
+                    "Shops"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user_id",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/routers.Req_Shop"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "{\"msg\":\"失敗\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users": {
             "get": {
                 "description": "GetAllUser",
@@ -194,7 +227,8 @@
             "required": [
                 "ShopAddress",
                 "ShopPhone",
-                "ShopTitle"
+                "ShopTitle",
+                "UserId"
             ],
             "properties": {
                 "ShopAddress": {
@@ -205,6 +239,9 @@
                 },
                 "ShopTitle": {
                     "type": "string"
+                },
+                "UserId": {
+                    "type": "integer"
                 }
             }
         },
